# Extreme_SVD_Projet_Option

./: .gitignore  Histogrammes.ipynb  Primme - Raccourci.lnk  README 2.md  README.md  benchmark.ipynb  benchmark.py  data_download.py  data_splitter.py  funcutils.py  generate.py  h5py_test.py  main.py  memmap_benchmark.py  memmap_results.csv  petite_benchmark_results.csv  random1Go_benchmark_results.csv  random_3GB_benchmark_results.csv  random_6GB_benchmark_results.csv  results_P_Desktop.csv  setup.cfg  svd_func.py  test.py  test_pyparsvd.py  xin_svd_func.py
.ipynb_checkpoints/: benchmark-checkpoint.ipynb
Extreme_SVD_Projet_Option.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/data_generate/: data_generator.py
data/mini_data/: data_splitter.py
projet/: func_to_test.py  func_to_test.py.lprof  test_ipython_paul.py  test_paul.py  test_paul.py.lprof  test_simple_paul.py
projet/.ipynb_checkpoints/: Benchmark-checkpoint.ipynb
pyparsvd/: parsvd_base.py
soutenance/: Gregory.csv  Histogrammes.ipynb  Paul.csv  README test.py in soutenance.md  Xin.csv  moyenne.hdf5  petite.hdf5  result.txt  test.py  test.py.lprof
soutenance/.ipynb_checkpoints/: Histogrammes-checkpoint.ipynb
tests/: test_parallel.py
