[metadata]
name = Extreme_SVD_Projet_Option
author = Paul DURAND--LUPINSKI Grégory LEVENTOUX Xin ZHANG
version = 1.0
license_file = LICENSE
license = MIT
description = établir un benchmark de méthodes SVD out-of-core implémentées en Python.
long_description = file: readme.md
long_description_content_type = “text/markdown”
[options]
packages = find:
python_requires = >= 3.6
install_requires =
    numpy
    matplotlib
    h5py
    sklearn
    mpi4py
    netCDF4
    xarray
    dask
    bottleneck
    
[options.entry_points]
console_scripts =
    generate=generate.__main__:main

[tool:pytest]
addopts = --doctest-modules --doctest-report ndiff
doctest_optionflags = NORMALIZE_WHITESPACE ELLIPSIS